--- a/coffe/index.html
+++ b/coffe/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <div id="meta"></div>
+    <div id="abc"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
