--- a/coffe/index.html
+++ b/coffe/index.html
@@ -10,6 +10,7 @@
     <div id="app"></div>
     <div id="meta"></div>
     <div id="abc"></div>
+    <div id="abc"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
