--- a/coffe/index.html
+++ b/coffe/index.html
@@ -9,8 +9,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Fira Code, Input Mono, Arial, Helvetica, sans-serif -->
 </head>
 <body>
-  
+  <head class="primary-header">
+    <div class="container">
+      <a href="#"><img src="/svg/logo_coffe.svg" alt="Cafe Street"></a>
+      <nav class="primary-nav">
+        <ul role="list">
+          <li>About us</li>
+          <li>Our Product</li>
+          <li>Delivery</li>
+        </ul>
+      </nav>
+      <form action="#">
+        <input type="text">
+      </form>
+    </div>
+  </head>
 </body>
-</html>
+</html> 
