--- a/coffe/index.html
+++ b/coffe/index.html
@@ -12,7 +12,7 @@
   <!-- Fira Code, Input Mono, Arial, Helvetica, sans-serif -->
 </head>
 <body>
-  <head class="primary-header">
+  <header class="primary-header">
     <div class="container">
       <a href="#"><img src="/svg/logo_coffe.svg" alt="Cafe Street"></a>
       <nav class="primary-nav">
@@ -22,10 +22,24 @@
           <li>Delivery</li>
         </ul>
       </nav>
-      <form action="#">
-        <input type="text">
+      <form action="#" class="search bar">
+        <input type="text" placeholder="Search your drink">
+        <button type="submit"><img src="/imgs/akar-icons_search.png" alt=""></button>
       </form>
+      <button><img src="/imgs/icons_cart 1x.png" alt=""></button>
     </div>
-  </head>
+  </header>
+
+  <main>
+    <section>
+      <div class="container">
+        <div class="even-columns">
+          <h2 class="fs-primary-heading fw-bold text-neutral-400 ">Enjoy your <span class="text-accent-600 ">coffee</span> before your activity</h2>
+          <p class="text--500">Boost your productivity and build your mood with a glass of coffee in the morning </p>
+          <button class="button">Order now</button>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html> 
