--- a/coffe/index.html
+++ b/coffe/index.html
@@ -40,6 +40,234 @@
         </div>
       </div>
     </section>
+
+    <!-- Popular drinks -->
+
+    <section>
+      <div>
+        <h4>Popular Now</h4>
+        <div class="even-columns">
+          <div>
+            <img src="/imgs/pop_1.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Vanilla Latte</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>21K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/pop_2.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Espresso</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>12K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/pop_3.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Hazelnut Latte</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>23K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <!-- Delivery Service -->
+
+    <section>
+      <div class="container">
+        <h3>How to use delivery service</h3>
+        <div class="even-columns">
+          <div>
+            <img src="/imgs/deli_1.png" alt="">
+            <h5>Choose your coffee</h5>
+            <p>There are 20+ coffees for you</p>
+          </div>
+          <div>
+            <img src="/imgs/deli_2.png" alt="">
+            <h5>We delivery it to you</h5>
+            <p>Choose delivery service</p>
+          </div>
+          <div>
+            <img src="/imgs/deli_3.png" alt="">
+            <h5>Enjoy your coffee</h5>
+            <p>Then feedback our your feeling</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About -->
+
+    <section>
+      <div class="bg-img">
+        <div class="even-columns">
+          <img src="/imgs/about_main.png" alt="">
+          <div>
+            <h4>About us</h4>
+            <h5>We provide quality coffee, and ready to deliver.</h5>
+            <p>We are a company that makes and distributes delicious drinks. our main product is made with a secret recipe and available in stores worldwide.</p>
+            <button class="button">Get your coffees</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Menu Area  -->
+
+    <section>
+      <div class="container">
+        <h4>Special menu for you</h4>
+        <div class="even-columns">
+          <div>
+            <img src="/imgs/menu_1.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Sandwich</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>20K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/menu_2.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Chocolate Milk</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>15K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/menu_3.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Coffee Ice Cream</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>25K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/menu_4.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Cappucino</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>10K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/menu_5.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Moccacino</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>12K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="/imgs/menu_6.png" alt="">
+            <div class="even-columns">
+              <div>
+                <h5>Waffle Ice Cream</h5>
+                <button>Hot</button>
+                <button>Cold</button>
+              </div>
+              <div>
+                <h5>35K</h5>
+                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About us -->
+    
+    <section>
+      <div>
+        <div class="even-columns">
+          <div>
+            <h4>what they say about us</h4>
+            <p>We always provide the best service and always maintain the quality of coffee</p>
+          </div>
+          <div>
+            <img src="/imgs/person_1.png" alt="">
+            <h5>Naura</h5>
+            <p>I really love the cappucino, the coffee was very smooth</p>
+          </div>
+          <div>
+            <img src="/imgs/person_2.png" alt="">
+            <h5>John</h5>
+            <p>This coffee shop is very convenient</p>
+          </div>
+          <div>
+            <img src="/imgs/person_3.png" alt="">
+            <h5>Azura</h5>
+            <p>The coffee menu here is very delicious</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+
+    <footer>
+      <div class="container"></div>
+        <div>
+          <h4>Subscribe to get 50% discount price</h4>
+          <form action="">
+            <input type="text" placeholder="Email address">
+            <button class="button">Order now</button>
+          </form>
+        </div>
+    </footer>
   </main>
 </body>
 </html> 
