--- a/coffe/index.html
+++ b/coffe/index.html
@@ -14,29 +14,30 @@
 <body>
   <header class="primary-header">
     <div class="container">
-      <a href="#"><img src="/svg/logo_coffe.svg" alt="Cafe Street"></a>
-      <nav class="primary-nav">
-        <ul role="list">
-          <li>About us</li>
-          <li>Our Product</li>
-          <li>Delivery</li>
-        </ul>
-      </nav>
-      <form action="#" class="search bar">
-        <input type="text" placeholder="Search your drink">
-        <button type="submit"><img src="/imgs/akar-icons_search.png" alt=""></button>
-      </form>
-      <button><img src="/imgs/icons_cart 1x.png" alt=""></button>
+      <div class="nav-wrapper">
+        <a href="#"><img src="/svg/logo_coffe.svg" alt="Cafe Street"></a>
+        <nav class="primary-nav">
+          <ul role="list" class="nav-list">
+            <li>About us</li>
+            <li>Our Product</li>
+            <li>Delivery</li>
+          </ul>
+        </nav>
+        <form action="#" class="search bar">
+          <input type="text" placeholder="Search your drink">
+          <img src="/imgs/header_icon_search.png" alt="">
+          <button class="invisible-button"><img src="/imgs/header_icon_cart.png" alt=""></button>
+        </form>
+      </div>
     </div>
   </header>
-
   <main>
     <section>
       <div class="container">
         <div class="even-columns">
           <h2 class="fs-primary-heading fw-bold text-neutral-400 ">Enjoy your <span class="text-accent-600 ">coffee</span> before your activity</h2>
           <p class="text--500">Boost your productivity and build your mood with a glass of coffee in the morning </p>
-          <button class="button">Order now</button>
+          <button class="normal-button">Order now</button>
         </div>
       </div>
     </section>
@@ -52,12 +53,12 @@
             <div class="even-columns">
               <div>
                 <h5>Vanilla Latte</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>21K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -66,12 +67,12 @@
             <div class="even-columns">
               <div>
                 <h5>Espresso</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>12K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -80,12 +81,12 @@
             <div class="even-columns">
               <div>
                 <h5>Hazelnut Latte</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>23K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -128,7 +129,7 @@
             <h4>About us</h4>
             <h5>We provide quality coffee, and ready to deliver.</h5>
             <p>We are a company that makes and distributes delicious drinks. our main product is made with a secret recipe and available in stores worldwide.</p>
-            <button class="button">Get your coffees</button>
+            <button class="normal-button">Get your coffees</button>
           </div>
         </div>
       </div>
@@ -145,12 +146,12 @@
             <div class="even-columns">
               <div>
                 <h5>Sandwich</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>20K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -159,12 +160,12 @@
             <div class="even-columns">
               <div>
                 <h5>Chocolate Milk</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>15K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -173,12 +174,12 @@
             <div class="even-columns">
               <div>
                 <h5>Coffee Ice Cream</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>25K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -187,12 +188,12 @@
             <div class="even-columns">
               <div>
                 <h5>Cappucino</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>10K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -201,12 +202,12 @@
             <div class="even-columns">
               <div>
                 <h5>Moccacino</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>12K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -215,12 +216,12 @@
             <div class="even-columns">
               <div>
                 <h5>Waffle Ice Cream</h5>
-                <button>Hot</button>
-                <button>Cold</button>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
               </div>
               <div>
                 <h5>35K</h5>
-                <button><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
           </div>
@@ -264,7 +265,7 @@
           <h4>Subscribe to get 50% discount price</h4>
           <form action="">
             <input type="text" placeholder="Email address">
-            <button class="button">Order now</button>
+            <button class="normal-button">Order now</button>
           </form>
         </div>
     </footer>
