--- a/coffe/index.html
+++ b/coffe/index.html
@@ -23,10 +23,10 @@
             <li>Delivery</li>
           </ul>
         </nav>
-        <form action="#" class="search bar">
+        <form action="#" class="search-bar">
           <input type="text" placeholder="Search your drink">
-          <img src="/imgs/header_icon_search.png" alt="">
-          <button class="invisible-button"><img src="/imgs/header_icon_cart.png" alt=""></button>
+          <img src="/imgs/header_search.png" alt="">
+          <button class="invisible-button"><img src="/imgs/header_cart.png" alt=""></button>
         </form>
       </div>
     </div>
