--- a/coffe/index.html
+++ b/coffe/index.html
@@ -45,51 +45,23 @@
     <!-- Popular drinks -->
 
     <section>
-      <div>
+      <div class="container">
         <h4>Popular Now</h4>
-        <div class="even-columns">
-          <div>
+        <div class="grid-items">
+          <div class="card-holder">
             <img src="/imgs/pop_1.png" alt="">
-            <div class="even-columns">
+            <div class="card-content">
               <div>
-                <h5>Vanilla Latte</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
+                <h5 class="fw-semi-bold fs-600 text-neutral-400">Vanilla Latte</h5>
+                <h5 class="fw-bold fs-600 text-neutral-400">15k</h5>
               </div>
               <div>
-                <h5>21K</h5>
+                <button class="small-button">Hot</button>
+                <button class="small-button">Cold</button>
                 <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
               </div>
             </div>
-          </div>
-          <div>
-            <img src="/imgs/pop_2.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Espresso</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>12K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
-            </div>
-          </div>
-          <div>
-            <img src="/imgs/pop_3.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Hazelnut Latte</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>23K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
-            </div>
-          </div>
+         
         </div>
       </div>
     </section>
@@ -140,89 +112,59 @@
     <section>
       <div class="container">
         <h4>Special menu for you</h4>
-        <div class="even-columns">
-          <div>
+        <div class="grid-items">
+          <div class="card-holder">
             <img src="/imgs/menu_1.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Sandwich</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>20K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
+            <div class="card-content">
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">Sandwich</h5>
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">18k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500">Bread with meat and vegetables</p>
+              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
             </div>
           </div>
-          <div>
+          <div class="card-holder">
             <img src="/imgs/menu_2.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Chocolate Milk</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>15K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
+            <div class="card-content">
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">Hot Milk</h5>
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">12k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500">Hot Milk with less sugar</p>
+              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
             </div>
           </div>
-          <div>
+          <div class="card-holder">
             <img src="/imgs/menu_3.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Coffee Ice Cream</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>25K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
+            <div class="card-content">
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">Coffe Ice Cream</h5>
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">15k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500">Coffe with ice cream vanilla</p>
+              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
             </div>
           </div>
-          <div>
+          <div class="card-holder">
             <img src="/imgs/menu_4.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Cappucino</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>10K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
+            <div class="card-content">
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">Cappucino</h5>
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">17k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
+              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
             </div>
           </div>
-          <div>
+          <div class="card-holder">
             <img src="/imgs/menu_5.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Moccacino</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>12K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
+            <div class="card-content">
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">Moccacinno</h5>
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">17k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
+              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
             </div>
           </div>
-          <div>
+          <div class="card-holder">
             <img src="/imgs/menu_6.png" alt="">
-            <div class="even-columns">
-              <div>
-                <h5>Waffle Ice Cream</h5>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-              </div>
-              <div>
-                <h5>35K</h5>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
-              </div>
+            <div class="card-content">
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">Waffle Ice Creeam</h5>
+              <h5 class="fw-semi-bold fs-600 text-neutral-400">25k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500">Waffle with ice cream</p>
+              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
             </div>
           </div>
         </div>
