--- a/coffe/index.html
+++ b/coffe/index.html
@@ -52,16 +52,43 @@
             <img src="/imgs/pop_1.png" alt="">
             <div class="card-content">
               <div>
-                <h5 class="fw-semi-bold fs-600 text-neutral-400">Vanilla Latte</h5>
-                <h5 class="fw-bold fs-600 text-neutral-400">15k</h5>
+                <h5 class="text-property-menu">Vanilla Latte</h5>
+                <h5 class="text-property-menu">15k</h5>
               </div>
               <div>
-                <button class="small-button">Hot</button>
-                <button class="small-button">Cold</button>
-                <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+                <div><button class="small-button">Hot</button></div>
+                <div><button class="small-button">Cold</button></div>
+                <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
               </div>
             </div>
-         
+        </div>
+          <div class="card-holder">
+            <img src="/imgs/pop_2.png" alt="">
+            <div class="card-content">
+              <div>
+                <h5 class="text-property-menu">Vanilla Latte</h5>
+                <h5 class="text-property-menu">15k</h5>
+              </div>
+              <div>
+                <div><button class="small-button">Hot</button></div>
+                <div><button class="small-button">Cold</button></div>
+                <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
+              </div>
+            </div>
+        </div>
+          <div class="card-holder">
+            <img src="/imgs/pop_3.png" alt="">
+            <div class="card-content">
+              <div>
+                <h5 class="text-property-menu">Vanilla Latte</h5>
+                <h5 class="text-property-menu">15k</h5>
+              </div>
+              <div>
+                <div><button class="small-button">Hot</button></div>
+                <div><button class="small-button">Cold</button></div>
+                <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -70,21 +97,21 @@
 
     <section>
       <div class="container">
-        <h3>How to use delivery service</h3>
-        <div class="even-columns">
+        <h3 class="fw-bold fs-700 text-neutral-400">How to use delivery service</h3>
+        <div class="grid-items">
           <div>
             <img src="/imgs/deli_1.png" alt="">
-            <h5>Choose your coffee</h5>
+            <h5 class="text-property-menu">Choose your coffee</h5>
             <p>There are 20+ coffees for you</p>
           </div>
           <div>
             <img src="/imgs/deli_2.png" alt="">
-            <h5>We delivery it to you</h5>
+            <h5 class="text-property-menu">We delivery it to you</h5>
             <p>Choose delivery service</p>
           </div>
           <div>
             <img src="/imgs/deli_3.png" alt="">
-            <h5>Enjoy your coffee</h5>
+            <h5 class="text-property-menu">Enjoy your coffee</h5>
             <p>Then feedback our your feeling</p>
           </div>
         </div>
@@ -116,55 +143,55 @@
           <div class="card-holder">
             <img src="/imgs/menu_1.png" alt="">
             <div class="card-content">
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">Sandwich</h5>
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">18k</h5>
-              <p class="fw-semi-bold fs-300 text-neutral-500">Bread with meat and vegetables</p>
-              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+              <h5 class="text-property-menu">Sandwich</h5>
+              <h5 class="text-property-menu">18k</h5>
+              <p class="fw-semi-bold fs-300 text-neutral-500"> meat and vegetables</p>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_2.png" alt="">
             <div class="card-content">
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">Hot Milk</h5>
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">12k</h5>
+              <h5 class="text-property-menu">Hot Milk</h5>
+              <h5 class="text-property-menu">12k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Hot Milk with less sugar</p>
-              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_3.png" alt="">
             <div class="card-content">
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">Coffe Ice Cream</h5>
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">15k</h5>
+              <h5 class="text-property-menu">Coffe Ice Cream</h5>
+              <h5 class="text-property-menu">15k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Coffe with ice cream vanilla</p>
-              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_4.png" alt="">
             <div class="card-content">
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">Cappucino</h5>
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">17k</h5>
+              <h5 class="text-property-menu">Cappucino</h5>
+              <h5 class="text-property-menu">17k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
-              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_5.png" alt="">
             <div class="card-content">
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">Moccacinno</h5>
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">17k</h5>
+              <h5 class="text-property-menu">Moccacinno</h5>
+              <h5 class="text-property-menu">17k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
-              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_6.png" alt="">
             <div class="card-content">
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">Waffle Ice Creeam</h5>
-              <h5 class="fw-semi-bold fs-600 text-neutral-400">25k</h5>
+              <h5 class="text-property-menu">Waffle Ice Cream</h5>
+              <h5 class="text-property-menu">25k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Waffle with ice cream</p>
-              <button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
           </div>
         </div>
