--- a/coffe/index.html
+++ b/coffe/index.html
@@ -50,47 +50,42 @@
         <div class="grid-items">
           <div class="card-holder">
             <img src="/imgs/pop_1.png" alt="">
-            <div class="card-content">
-              <div>
-                <h5 class="text-property-menu">Vanilla Latte</h5>
-                <h5 class="text-property-menu">15k</h5>
-              </div>
-              <div>
-                <div><button class="small-button">Hot</button></div>
+            <div class="card-content-menu">
+              <h5 class="text-property-menu">Vanilla Latte</h5>
+              <h5 class="text-property-menu">15k</h5>
+              <div class="even-columns">
+                <div cl><button class="small-button">Hot</button></divc>
                 <div><button class="small-button">Cold</button></div>
-                <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
               </div>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
         </div>
           <div class="card-holder">
             <img src="/imgs/pop_2.png" alt="">
-            <div class="card-content">
-              <div>
-                <h5 class="text-property-menu">Vanilla Latte</h5>
-                <h5 class="text-property-menu">15k</h5>
-              </div>
-              <div>
+            <div class="card-content-menu">
+              <h5 class="text-property-menu">Espresso</h5>
+              <h5 class="text-property-menu">18k</h5>
+              <div class="even-columns">
                 <div><button class="small-button">Hot</button></div>
                 <div><button class="small-button">Cold</button></div>
-                <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
               </div>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
         </div>
           <div class="card-holder">
             <img src="/imgs/pop_3.png" alt="">
-            <div class="card-content">
-              <div>
-                <h5 class="text-property-menu">Vanilla Latte</h5>
-                <h5 class="text-property-menu">15k</h5>
-              </div>
-              <div>
+            <div class="card-content-menu">
+              <h5 class="text-property-menu">Hazelnut Latte</h5>
+              <h5 class="text-property-menu">22k</h5>
+              <div class="even-columns">
                 <div><button class="small-button">Hot</button></div>
                 <div><button class="small-button">Cold</button></div>
-                <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
               </div>
+              <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
-        </div>
+        </div>      
       </div>
+    </div>
     </section>
     
     <!-- Delivery Service -->
@@ -99,17 +94,17 @@
       <div class="container">
         <h3 class="fw-bold fs-700 text-neutral-400">How to use delivery service</h3>
         <div class="grid-items">
-          <div>
+          <div class="delivery-content">
             <img src="/imgs/deli_1.png" alt="">
             <h5 class="text-property-menu">Choose your coffee</h5>
             <p>There are 20+ coffees for you</p>
           </div>
-          <div>
+          <div class="delivery-content">
             <img src="/imgs/deli_2.png" alt="">
             <h5 class="text-property-menu">We delivery it to you</h5>
             <p>Choose delivery service</p>
           </div>
-          <div>
+          <div class="delivery-content">
             <img src="/imgs/deli_3.png" alt="">
             <h5 class="text-property-menu">Enjoy your coffee</h5>
             <p>Then feedback our your feeling</p>
@@ -142,7 +137,7 @@
         <div class="grid-items">
           <div class="card-holder">
             <img src="/imgs/menu_1.png" alt="">
-            <div class="card-content">
+            <div class="card-content-menu">
               <h5 class="text-property-menu">Sandwich</h5>
               <h5 class="text-property-menu">18k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500"> meat and vegetables</p>
@@ -151,7 +146,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_2.png" alt="">
-            <div class="card-content">
+            <div class="card-content-menu">
               <h5 class="text-property-menu">Hot Milk</h5>
               <h5 class="text-property-menu">12k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Hot Milk with less sugar</p>
@@ -160,7 +155,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_3.png" alt="">
-            <div class="card-content">
+            <div class="card-content-menu">
               <h5 class="text-property-menu">Coffe Ice Cream</h5>
               <h5 class="text-property-menu">15k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Coffe with ice cream vanilla</p>
@@ -169,7 +164,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_4.png" alt="">
-            <div class="card-content">
+            <div class="card-content-menu">
               <h5 class="text-property-menu">Cappucino</h5>
               <h5 class="text-property-menu">17k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
@@ -178,7 +173,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_5.png" alt="">
-            <div class="card-content">
+            <div class="card-content-menu">
               <h5 class="text-property-menu">Moccacinno</h5>
               <h5 class="text-property-menu">17k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
@@ -187,7 +182,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_6.png" alt="">
-            <div class="card-content">
+            <div class="card-content-menu">
               <h5 class="text-property-menu">Waffle Ice Cream</h5>
               <h5 class="text-property-menu">25k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Waffle with ice cream</p>
