--- a/coffe/index.html
+++ b/coffe/index.html
@@ -50,19 +50,19 @@
         <div class="grid-items">
           <div class="card-holder">
             <img src="/imgs/pop_1.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Vanilla Latte</h5>
               <h5 class="text-property-menu">15k</h5>
-              <div class="even-columns">
-                <div cl><button class="small-button">Hot</button></divc>
+              <div class="drink-property">
+                <div><button class="small-button">Hot</button></div>
                 <div><button class="small-button">Cold</button></div>
               </div>
               <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
-        </div>
+          </div>
           <div class="card-holder">
             <img src="/imgs/pop_2.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Espresso</h5>
               <h5 class="text-property-menu">18k</h5>
               <div class="even-columns">
@@ -71,27 +71,27 @@
               </div>
               <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
-        </div>
+          </div>
           <div class="card-holder">
             <img src="/imgs/pop_3.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Hazelnut Latte</h5>
-              <h5 class="text-property-menu">22k</h5>
+              <h5 class="text-property-menu">20k</h5>
               <div class="even-columns">
                 <div><button class="small-button">Hot</button></div>
                 <div><button class="small-button">Cold</button></div>
               </div>
               <div><button class="cart-button"><img src="/imgs/icon_cart_add.png" alt=""></button></div>
             </div>
-        </div>      
+          </div>
+        </div>
       </div>
-    </div>
     </section>
     
     <!-- Delivery Service -->
 
     <section>
-      <div class="container">
+      <div class="container padding-block-900">
         <h3 class="fw-bold fs-700 text-neutral-400">How to use delivery service</h3>
         <div class="grid-items">
           <div class="delivery-content">
@@ -119,12 +119,12 @@
       <div class="bg-img">
         <div class="even-columns">
           <img src="/imgs/about_main.png" alt="">
-          <div>
-            <h4>About us</h4>
-            <h5>We provide quality coffee, and ready to deliver.</h5>
-            <p>We are a company that makes and distributes delicious drinks. our main product is made with a secret recipe and available in stores worldwide.</p>
-            <button class="normal-button">Get your coffees</button>
-          </div>
+          <ul role="list">
+            <li>About us</li>
+            <li>We provide quality coffee, and ready to deliver.</li>
+            <li>We are a company that makes and distributes delicious drinks. our main product is made with a secret recipe and available in stores worldwide.</li>
+            <li><button class="normal-button">Get your coffees</button>/li>
+          </ul>
         </div>
       </div>
     </section>
@@ -133,11 +133,11 @@
 
     <section>
       <div class="container">
-        <h4>Special menu for you</h4>
+        <h4 >Special menu for you</h4>
         <div class="grid-items">
           <div class="card-holder">
             <img src="/imgs/menu_1.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Sandwich</h5>
               <h5 class="text-property-menu">18k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500"> meat and vegetables</p>
@@ -146,7 +146,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_2.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Hot Milk</h5>
               <h5 class="text-property-menu">12k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Hot Milk with less sugar</p>
@@ -155,7 +155,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_3.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Coffe Ice Cream</h5>
               <h5 class="text-property-menu">15k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Coffe with ice cream vanilla</p>
@@ -164,7 +164,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_4.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Cappucino</h5>
               <h5 class="text-property-menu">17k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
@@ -173,7 +173,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_5.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Moccacinno</h5>
               <h5 class="text-property-menu">17k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Sweet and pretty</p>
@@ -182,7 +182,7 @@
           </div>
           <div class="card-holder">
             <img src="/imgs/menu_6.png" alt="">
-            <div class="card-content-menu">
+            <div class="card-content">
               <h5 class="text-property-menu">Waffle Ice Cream</h5>
               <h5 class="text-property-menu">25k</h5>
               <p class="fw-semi-bold fs-300 text-neutral-500">Waffle with ice cream</p>
